Correct paragraph alignment to just book page

--- a/css/books.css
+++ b/css/books.css
@@ -49,7 +49,7 @@
     font-style: normal;
 }
 
-p {
+.books p {
     text-align: center;
 }
 
